[package]
name = "disque-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disque = { git = "https://github.com/kaspar030/disque-rs" }
gethostname = "0.4.1"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
metrics-util = "0.14.0"
rouille = "3.6.1"
tracing-subscriber = "0.3.16"
